tests/snapshots/examples_fixtures/type_system__failing__120_match_pipe_separator.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/120_match_pipe_separator.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Invalid Match Arm Separator

Match arms are separated by `,` in Flux, not `|`.

  examples/type_system/failing/120_match_pipe_separator.flx:24:30
   |
24 |     let x = match 1 { 0 -> 0 | _ -> 1 }
   |                              ^

Hint:
  Replace `|` with `,`.

Note:
  while parsing function `main` > `match` expression
== stdout ==
<not executed>
